@@ -259,6 +259,10 @@ namespace libtorrent
 		PRINT_OFFSETOF(torrent, m_resume_entry)
 		PRINT_OFFSETOF(torrent, m_name)
 		PRINT_OFFSETOF(torrent, m_storage_constructor)
+		PRINT_OFFSETOF(torrent, m_added_time)
+		PRINT_OFFSETOF(torrent, m_completed_time)
+		PRINT_OFFSETOF(torrent, m_last_seen_complete)
+		PRINT_OFFSETOF(torrent, m_last_saved_resume)
 #ifndef TORRENT_DISABLE_ENCRYPTION
 		PRINT_OFFSETOF(torrent, m_obfuscated_hash)
 #endif
@@ -268,9 +272,6 @@ namespace libtorrent
 		PRINT_OFFSETOF(torrent, m_piece_time_deviation)
 		PRINT_OFFSETOF(torrent, m_total_failed_bytes)
 		PRINT_OFFSETOF(torrent, m_total_redundant_bytes)
-		PRINT_OFFSETOF(torrent, m_added_time)
-		PRINT_OFFSETOF(torrent, m_completed_time)
-		PRINT_OFFSETOF(torrent, m_last_seen_complete)
 //		PRINT_OFFSETOF(torrent, m_upload_mode_time:24)
 //		PRINT_OFFSETOF(torrent, m_state:3)
 //		PRINT_OFFSETOF(torrent, m_storage_mode:2)
@@ -358,6 +359,10 @@ namespace libtorrent
 		, m_uuid(p.uuid)
 		, m_source_feed_url(p.source_feed_url)
 		, m_storage_constructor(p.storage)
+		, m_added_time(time(0))
+		, m_completed_time(0)
+		, m_last_seen_complete(0)
+		, m_last_saved_resume(time(0))
 		, m_checking_piece(0)
 		, m_num_checked_pieces(0)
 		, m_ratio(0.f)
@@ -366,10 +371,6 @@ namespace libtorrent
 		, m_piece_time_deviation(0)
 		, m_total_failed_bytes(0)
 		, m_total_redundant_bytes(0)
-		, m_added_time(time(0))
-		, m_completed_time(0)
-		, m_last_seen_complete(0)
-		, m_last_saved_resume(time(0))
 		, m_upload_mode_time(0)
 		, m_state(torrent_status::checking_resume_data)
 		, m_storage_mode(p.storage_mode)
